helm/guestbook-deploy-10.1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-10-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: guestbook-10-1
  template:
    metadata:
      name: guestbook
      labels:
        app: guestbook-10-1
    spec:
      containers:
        - name: guestbook
          image: ghcr.io/cloudowski/flask-guestbook:0.1
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 6
