helm/guestbook-svc-10-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-10-1
spec:
  selector:
    app: guestbook-10-1
  ports:
    - port: 8080
      targetPort: 8080
