helm/guestbook-ingress-10-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-10-1
spec:
  rules:
    - host: guestbook-final.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: guestbook-10-1
                port:
                  number: 8080
